--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ plantuml = "^0.3.0"
 six = "^1.17.0"
 aiohttp = "^3.11.12"
 fastapi = "^0.115.8"
-unicorn = "^2.1.2"
+uvicorn = "^0.34.0"
 
 
 [build-system]
