--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 aiogram = "^3.18.0"
-plantuml = "^0.3.0"
 six = "^1.17.0"
 aiohttp = "^3.11.12"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
+google-genai = "^1.2.0"
 
 
 [build-system]
