--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ aiohttp = "^3.11.12"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
 google-genai = "^1.2.0"
+pydantic-settings = "^2.7.1"
 
 
 [build-system]
